zweiter button bei modal hinzugefügt

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -121,7 +121,8 @@
                             </div>
                             <div class="modal-footer">
                                 <!-- schließen button im fenster-->
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -147,7 +148,8 @@
                                 Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel. Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken, denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -173,7 +175,8 @@
                                 Mischlingsrüde Berti ist am 19.11.15 geboren und wurde am 16.06.18 im Tierheim abgegeben, weil sein Frauchen mit ihm überfordert war und Berti wohl auch mit der Familie. Berti war stark auf sein Frauchen fixiert und kam immer weniger mit den Kindern klar. Man merkt Berti an, dass er recht unsicher ist und Halt bei einer Bezugsperson sucht. Bei fremden Personen braucht er etwas Zeit um Vertrauen zu fassen. Berti neigt dazu Resourcen - besonders Plätze wie seinen Schlafplatz - zu verteidigen. Je vertrauter jedoch ihm eine Person ist, desto eher duldet er es, wenn diese sich einem "verbotenen" Platz nähert.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -200,7 +203,8 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -227,7 +231,8 @@
                                 Quintus ist ein sehr schüchterner Nager der die fähtigkeit besitzt sich in windeseile in ihr Herz zu zaubern, mit diesem kleinen Freund werden Sie (wenn Sie auch sein Herz gewonnen haben) mit sicherheit den ein oder anderen schönen tag verbringen. Wer weis? vielleicht wird das ja eine Partnerschaft für immer?
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -253,7 +258,8 @@
                                 Simone ist das Paradebeispiel für eine verschmuste und vertrauenswürdige Ziege mit der sich jeder Ziegenliebhaber Glücklich schätzen kann. Zudem ist sie Kinderlieb, Seniorenverträglich und macht nicht wegen jeder kleinigkeit ein riesen Theater. Rundum pflegeleicht also! Wenn Sie auf der Suche nach der idealen Ziege sind dann melden sie sich gerne bei und für ein Probeschmusen mit Simone!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -279,7 +285,8 @@
                                 Ludwig, zu viele Wort um dieses einzigartige Kerlchen zu beschreiben! Sie sind auf der Suche nach dem ausergewöhnlichen? stellen sich gerne neuen Herausforderungen und sind bereit Ihr Leben voll und ganz einem anderen Wesen unterzuordnen? dann melden sie sich doch für Ludwig! er ist ein Garant für unterhaltssame Nachmittage, ihre Freunde werden staunen!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -305,7 +312,8 @@
                                 Ritschi ist in seiner nun vertrauten Umgebung total souverän und selbstsicher geworden. Besonders wenn es um leckeres Futter geht, ist Ritschi immer als Erster zur Stelle. Er ist auch unheimlich verspielt und unternehmungslustig. Die Neugierde lässt ihn auch schon mal jede Vorsicht vergessen, denn leichte Zurückhaltung legt er immer noch an den Tag.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -331,7 +339,8 @@
                                 Sie sind auf der suche nach einem neuen Hund? stellen sich gerne neuen Herausforderungen! Hagrid wartet bereits auf Sie und ist bereit in sein neues zu Hause einzuziehen!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -356,7 +365,8 @@
                                 Freddi sucht wieder Anschluss... Ihr kumpel ist leider verstorben und sie möchte ihren Lebensabend nicht alleine verbringen. Freddi sucht einen Kumpel, der auch schon im Seniorenalter ist. Sie ist 8 Jahre alt und sterilisiert.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Schließen</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
@@ -379,9 +389,12 @@
                             </div>
                             <div class="modal-body">
                                 der Karthäuser Mix könnte als Einzelkatze umziehen, da er im Haus auch oft allein für sich auf dem Kratzbaum liegt (er ist da ein echter Chiller). Er sucht katzenerfahrene Menschen, die ihn nicht bedrängen (dann wehrt er sich) sondern einfach von allein kommen lassen.
+                                <br />
+
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
                     </div>
