--- a/src/Impressum.html
+++ b/src/Impressum.html
@@ -18,33 +18,33 @@
         <!--Navbar-->
         <section id="navbar">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="#">
-                <img src="Bilder/logo.jpg" id="logo" alt="ziege" />
-              </a>
+              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand">
+                        <img src="Bilder/logo.png" id="logo" alt="ziege" />
+                    </a>
 
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a class="nav-link" href="home.html">Home </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="galerie.html">Galerie</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="formular.html">Kontakt</a>
-                    </li>
-                    <li class="nav-item active">
-                    <a class="nav-link" href="Impressum.html">Impressum<span class="sr-only">(current)</span></a>
-                  </li>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav mr-auto">
+                              <li class="nav-item">
+                                  <a class="nav-link" href="home.html">Home </a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="galerie.html">Galerie</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="formular.html">Kontakt</a>
+                              </li>
+                              <li class="nav-item active ">
+                                  <a class="nav-link" href="Impressum.html">Impressum <span class="sr-only">(current)</span></a>
+                              </li>
 
-                </ul>
+                          </ul>
 
-            </div>
+                  </div>
           </nav>
       </section>
     </header>
