Code bereinigt Kommentierung Responsive Webdesign verbessert Lösung für Nebeneinanderstehen der Nameneingabefelder gefunden
Es fehlt:
Berichtigung des form.js

--- a/src/form.html
+++ b/src/form.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8"  />
+		<!-- Codeschnipsel für responsive Webdesign -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>BIOS - Eine zweite Chance</title> <!-- Webseitentitel (im Tab zu sehen) -->
 
         <!-- Bootstrap -->
@@ -78,8 +81,8 @@
                 </label>
 
                 <div class="side-by-side" > <!-- Eingabefelder für Vorname und Nachname stehen nebeneinander -->
-                    <input type="text" name="firstname" id="name" placeholder="Vorname"/> <!-- Festlegen eines Eingabefeldes -->
-                    <input type="text" name="lastname" id="name" placeholder="Nachname" />
+                    <input type="text" name="firstname" id="vorname" placeholder="Vorname"/> <!-- Festlegen eines Eingabefeldes -->
+                    <input type="text" name="lastname" id="nachname" placeholder="Nachname" />
                 </div>
 
                 <!-- E-Mail -->
