--- a/src/Impressum.html
+++ b/src/Impressum.html
@@ -5,9 +5,18 @@
         <title> BIOS - Imperssum</title>
         <meta charset="utf-8">
 
+
          <link rel="stylesheet" href="css/bootstrap.min.css">
+         <link rel="stylesheet" href="css/bootstrap.min.css">
+         <script src="js/jquery-3.3.1.slim.min.js"></script>
+          <script src="js/jquery-1.11.1.min.js"></script>
+         <script src="js/bootstrap.min.js"></script>
+
+         <!--Eigenes Stylesheet, Schriftart, und JS-->
+
          <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
          <link rel="stylesheet" href="css/impressum.css" />
+         <script src="javascript.js"></script>
 
     </head>
 
@@ -47,9 +56,12 @@
                   </div>
           </nav>
       </section>
+      <!--Navbar Ende-->
     </header>
 
     <main>
+
+      <!--Imperssum-->
 
     <div class="row">
 
@@ -62,7 +74,7 @@
                 Tierschutzverein Musterhausen und Umgebung e.V.</br>
                 Musterstraße 1</br>
                 12345 Musterhausen</br>
-                </h2>
+              </h2>
 
                 <br />
 
@@ -110,10 +122,11 @@
                   IBAN DE11 2222 3333 4444 5555 66</br>
                   </h4>
       </div>
+      <!--Imperssum Ende-->
 
 
 
-
+          <!--Sidebar-->
           <div class="sidebar col-md-2">
 
                   <div class="spendentext">
@@ -147,7 +160,7 @@
                                   <img id="facebook" src="Bilder/Facebook.png" alt="Facebook-Link"/>
                               </a>
                     </div>
-                  </div>
+                  </div> <!--Sidebar Ende-->
                 </div>
 
     </main>
@@ -171,7 +184,7 @@
                                 </li>
                                 <li>
                                   <a> <u>Spenden über Paypal:</u></a> </br>
-                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
+                                  <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" id="donate" />
                                 </li>
 
                           </ul>
