--- a/src/home.html
+++ b/src/home.html
@@ -5,17 +5,16 @@
         <title> BIOS - Home</title>
         <meta charset="utf-8">
           <!-- Bootstrap -->
+
          <link rel="stylesheet" href="css/bootstrap.min.css">
          <script src="js/jquery-3.3.1.slim.min.js"></script>
           <script src="js/jquery-1.11.1.min.js"></script>
-         <script src="javascript.js"></script>
-         <script src="js/bootstrap.min.js"></script>
+          <script src="js/bootstrap.min.js"></script>
 
-         <!--Stylesheet-->
+         <!--Eigenes Stylesheet, JavaScript und Schriftart-->
          <link rel="stylesheet" href="css/style.css" />
+         <script src="javascript.js"></script>
          <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
-
-
 
     </head>
 
@@ -55,6 +54,7 @@
                   </div>
           </nav>
       </section>
+      <!--Navbar Ende-->
     </header>
 
     <main>
@@ -98,8 +98,9 @@
                         <span class="sr-only">Next</span>
                       </a>
             </section>
+              <!--Karussel Ende-->
 
-                <!--Teaminfo-->
+              <!--Allgemeine Teaminfo-->
 
                   <section class="team container">
 
@@ -119,8 +120,9 @@
 
                     </div>
                   </section>
+                <!--Allgemeine Teaminfo Ende-->
 
-                <!--Einzelvorstellung-->
+
 
 
             </div> <!--close class= col-md-10-->
@@ -165,9 +167,9 @@
 
 					         </div>
 
-          </div>
+          </div> <!--sidebar Ende-->
 
-          <!--Galerie-->
+          <!--Einzelvorstellung-->
           <div class="row">
             <div class="container-team col-md-12">
                   <div class="row" id="Einzelvorstellung">
@@ -294,8 +296,10 @@
 
             </div>  <!--close class=container-team-->
 
-          </div><!--close row=galerie-->
+          </div><!--close row=Einzelvorstellung-->
+          <!--Einzelvorstellung Ende-->
 
+          <!--Text Karussel-->
           <div class="container">
               <div id="carouselContent" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner" role="listbox">
@@ -331,7 +335,7 @@
               </div>
           </div> <!--close quote caorusel-->
 
-
+          <!--Text Karussel Ende-->
 
     </div> <!--row außenrumcontainer close-->
 
