--- a/src/galerie.html
+++ b/src/galerie.html
@@ -43,14 +43,12 @@
                                           <a class="nav-link" href="galerie.html">Galerie</a>
                                       </li>
                                       <li class="nav-item">
-                                          <a class="nav-link" href="formular.html">Kontakt</a>
+                                          <a class="nav-link" href="test.html">Kontakt</a>
                                       </li>
                                       <li class="nav-item">
                                           <a class="nav-link" href="Impressum.html">Impressum</a>
                                       </li>
-
                                   </ul>
-
                           </div>
                   </nav>
               </section>
@@ -68,7 +66,6 @@
                 <!-- Textblock über die komplette Seitenbreite -->
 
                 <div class="textBlock col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
                     Lieber Besucher,
                     </br>
                     </br> Sie möchten einem Tier ein neues Zu Hause geben? dann sind sie hier genau richtig! In unserer Galerie haben Sie die Möglickeit unsere aktuellen Bewohner näher kennen zu lernen und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen, hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular!
@@ -76,7 +73,6 @@
                     </br>
                     </br>
                     <h5>Ihr Tierheim-Team </h5>
-
                 </div>
 
                 <!-- Button mit Filterfunktion, Alle vorgewählt, data-filter= Filter der Galeriebilder -->
@@ -86,7 +82,6 @@
                     <button class="btn filter-button" data-filter="katzen">Katzen</button>
                     <button class="btn filter-button" data-filter="nagetiere">Nagetiere</button>
                     <button class="btn filter-button" data-filter="ziegen">Ziegen</button>
-
                 </div>
                 </br>
 
@@ -121,7 +116,7 @@
                             </div>
                             <div class="modal-footer">
                                 <!-- schließen button im fenster-->
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -148,7 +143,7 @@
                                 Spencer ist ein schüchterner kleiner Kater und versteckt sich noch sehr viel. Wenn man aber einfach ruhig sitzen bleibt, lässt er sich relativ schnell blicken, denn im Grunde ist er unheimlich neugierig. Mit Artgenossen kommt Spencer super klar.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -175,7 +170,7 @@
                                 Mischlingsrüde Berti ist am 19.11.15 geboren und wurde am 16.06.18 im Tierheim abgegeben, weil sein Frauchen mit ihm überfordert war und Berti wohl auch mit der Familie. Berti war stark auf sein Frauchen fixiert und kam immer weniger mit den Kindern klar. Man merkt Berti an, dass er recht unsicher ist und Halt bei einer Bezugsperson sucht. Bei fremden Personen braucht er etwas Zeit um Vertrauen zu fassen. Berti neigt dazu Resourcen - besonders Plätze wie seinen Schlafplatz - zu verteidigen. Je vertrauter jedoch ihm eine Person ist, desto eher duldet er es, wenn diese sich einem "verbotenen" Platz nähert.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -203,7 +198,7 @@
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -231,7 +226,7 @@
                                 Quintus ist ein sehr schüchterner Nager der die fähtigkeit besitzt sich in windeseile in ihr Herz zu zaubern, mit diesem kleinen Freund werden Sie (wenn Sie auch sein Herz gewonnen haben) mit sicherheit den ein oder anderen schönen tag verbringen. Wer weis? vielleicht wird das ja eine Partnerschaft für immer?
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -258,7 +253,7 @@
                                 Simone ist das Paradebeispiel für eine verschmuste und vertrauenswürdige Ziege mit der sich jeder Ziegenliebhaber Glücklich schätzen kann. Zudem ist sie Kinderlieb, Seniorenverträglich und macht nicht wegen jeder kleinigkeit ein riesen Theater. Rundum pflegeleicht also! Wenn Sie auf der Suche nach der idealen Ziege sind dann melden sie sich gerne bei und für ein Probeschmusen mit Simone!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -285,7 +280,7 @@
                                 Ludwig, zu viele Wort um dieses einzigartige Kerlchen zu beschreiben! Sie sind auf der Suche nach dem ausergewöhnlichen? stellen sich gerne neuen Herausforderungen und sind bereit Ihr Leben voll und ganz einem anderen Wesen unterzuordnen? dann melden sie sich doch für Ludwig! er ist ein Garant für unterhaltssame Nachmittage, ihre Freunde werden staunen!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -312,7 +307,7 @@
                                 Ritschi ist in seiner nun vertrauten Umgebung total souverän und selbstsicher geworden. Besonders wenn es um leckeres Futter geht, ist Ritschi immer als Erster zur Stelle. Er ist auch unheimlich verspielt und unternehmungslustig. Die Neugierde lässt ihn auch schon mal jede Vorsicht vergessen, denn leichte Zurückhaltung legt er immer noch an den Tag.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -339,7 +334,7 @@
                                 Sie sind auf der suche nach einem neuen Hund? stellen sich gerne neuen Herausforderungen! Hagrid wartet bereits auf Sie und ist bereit in sein neues zu Hause einzuziehen!
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -365,7 +360,7 @@
                                 Freddi sucht wieder Anschluss... Ihr kumpel ist leider verstorben und sie möchte ihren Lebensabend nicht alleine verbringen. Freddi sucht einen Kumpel, der auch schon im Seniorenalter ist. Sie ist 8 Jahre alt und sterilisiert.
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -378,22 +373,47 @@
                     </button>
                 </div>
 
+                <div class="modal fade" id="Modal10" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLabel">Freddi</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Freddi sucht wieder Anschluss... Ihr kumpel ist leider verstorben und sie möchte ihren Lebensabend nicht alleine verbringen. Freddi sucht einen Kumpel, der auch schon im Seniorenalter ist. Sie ist 8 Jahre alt und sterilisiert.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
+                                <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
+                    <button type="button" class="btn" data-toggle="modal" data-target="#Modal11">
+                        <img src="Bilder/katze3.png" alt="Samson" title="Samson - klicken für mehr Infos" />
+                    </button>
+                </div>
+
                 <div class="modal fade" id="Modal11" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="ModalLabel">Tolkien</h5>
+                                <h5 class="modal-title" id="ModalLabel">Samson</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
-                                der Karthäuser Mix könnte als Einzelkatze umziehen, da er im Haus auch oft allein für sich auf dem Kratzbaum liegt (er ist da ein echter Chiller). Er sucht katzenerfahrene Menschen, die ihn nicht bedrängen (dann wehrt er sich) sondern einfach von allein kommen lassen.
-                                <br />
+                                Samson ist ein wahrer Schmusekater und zeigt unserem Team Tag für Tag wie das verhalten einer Würdevollen Katze funktioniert. Er ist für jeden Spaß zu haben und wird (hoffentlich) bald auch Ihr Leben bereichern!
 
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Zum Kontaktformular</button>
+                                <button type="button" class="linkBtn" onClick="parent.location='form.html'" data-dismiss="modal">Kontaktformular</button>
                                 <button type="button" class="btnClose" data-dismiss="modal">Schließen</button>
                             </div>
                         </div>
@@ -408,7 +428,7 @@
     </section>
 
     <footer>
-       <hr/>
+            <hr/>
                <div class="container">
                    <div class="row">
                        <div class="col-md-4">
