--- a/src/galerie.html
+++ b/src/galerie.html
@@ -26,7 +26,7 @@
                 <section id="navbar">
 
                       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <a class="navbar-brand" href="#">
+                            <a class="navbar-brand">
                                 <img src="Bilder/logo.png" id="logo" alt="ziege" />
                             </a>
 
@@ -36,19 +36,21 @@
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                   <ul class="navbar-nav mr-auto">
-                                      <li class="nav-item">
-                                          <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                                      <li class="nav-item ">
+                                          <a class="nav-link" href="home.html">Home </a>
                                       </li>
                                       <li class="nav-item active">
-                                          <a class="nav-link" href="galerie.html">Galerie</a>
+                                          <a class="nav-link" href="galerie.html">Galerie<span class="sr-only">(current)</span></a>
                                       </li>
                                       <li class="nav-item">
-                                          <a class="nav-link" href="test.html">Kontakt</a>
+                                          <a class="nav-link" href="form.html">Kontakt</a>
                                       </li>
                                       <li class="nav-item">
                                           <a class="nav-link" href="Impressum.html">Impressum</a>
                                       </li>
+
                                   </ul>
+
                           </div>
                   </nav>
               </section>
