--- a/src/home.html
+++ b/src/home.html
@@ -20,11 +20,12 @@
 
     </head>
 
-    <body >
+    <body>
 
       <header>
 
-        <!--Navbar-->
+        <!--navbar-->
+
         <section id="navbar">
 
               <nav class="navbar navbar-expand-lg navbar-light bg-light">
