--- a/src/home.html
+++ b/src/home.html
@@ -151,7 +151,7 @@
 
                     </br>
                       Du hast Interesse an einem Job oder einer Ausbildung? </br>
-                      Wir freuen uns über deine Online-Bewerbung an <u>tierheim.bios@web.de</u>
+                      Wir freuen uns über deine Bewerbung!
                     </br>
                     </br>
                   </div>
