--- a/src/Impressum.html
+++ b/src/Impressum.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title> BIOS - Imperssum</title>
+        <title>BIOS - Eine zweite Chance</title>
         <link rel="icon" href="Bilder/logo_ohne_bios.png"/>
         <meta charset="utf-8">
 
