--- a/src/galerie.html
+++ b/src/galerie.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="galerie.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>BIOS - eine Zweite Chance </title>
+    <title>BIOS - Eine zweite Chance </title>
     <link rel="icon" href="Bilder/logo_ohne_bios.png"/>
 </head>
 <body>
