--- a/src/home.html
+++ b/src/home.html
@@ -2,7 +2,7 @@
 
     <head>
 
-        <title> BIOS - Home</title>
+        <title>BIOS - Eine zweite Chance</title>
         <link rel="icon" href="Bilder/logo_ohne_bios.png"/>
         <meta charset="utf-8">
           <!-- Bootstrap -->
